<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actor_collision_plugin</name>
  <version>0.0.0</version>
  <description>Actor Collision Plugin for Gazebo</description>
  <maintainer email="dhaval_lad@todo.todo">dhaval_lad</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
